add nvim-jdtls recipe